Finished search bar and adjusted box-shadow

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 <img src="resources/img/google_logo.png" alt="Google logo">
             </div>
             
-            <div class="search_bar">
-                <input type="text" placeholder="Search..">
+            <div class="search_bar_container">
+                <image src="resources/img/magnifying_glass_icon.png" class= "magnifying_glass_icon" alt="Magnifying glass icon">
+                <input type="text" class="search_bar">
+                <img src="resources/img/microphone_icon.png" class= "microphone_icon" alt="Microphone icon">
             </div>
 
             <div class="search_buttons">
