--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="search_buttons">
                 <button class="google_search" href="#">Google Search</button>
-                <button class="google_search" href="#">I'm Feeling Lucky</button>
+                <button class="lucky_search" href="#">I'm Feeling Lucky</button>
             </div>
         </main>
 
@@ -44,7 +44,7 @@
             <li class="left_footer">
                 <a href="#">Advertising</a>
                 <a href="#">Business</a>
-                <a href="#">How Search Works</a>
+                <a href="#">How Search works</a>
             </li>
 
             <li class="right_footer">
@@ -56,6 +56,5 @@
         </footer>
 
     </body>
-
 
 </html>
