Added Github link to the page.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <body>
         <nav class="nav">
             <li class="left_nav">
-                <a href="#">About</a>
-                <a href="#">Store</a>
+                <a href="https://github.com/itsmaximelau">About</a>
+                <a href="https://github.com/itsmaximelau">Store</a>
             </li>
 
             <li class="right_nav">
-                <a href="#">Gmail</a>
-                <a href="#">Images</a>
-                <a href="#" class="apps_button">
+                <a href="https://github.com/itsmaximelau">Gmail</a>
+                <a href="https://github.com/itsmaximelau">Images</a>
+                <a href="https://github.com/itsmaximelau" class="apps_button">
                     <img src="resources/img/apps_button.png" alt="Apps button">
                 </a>
-                <button class="sign_in_button" href="#">Sign in</button>
+                <button class="sign_in_button" onclick=location.href="https://github.com/itsmaximelau">Sign in</button>
             </li>
 
         </nav>
@@ -35,23 +35,23 @@
             </div>
 
             <div class="search_buttons">
-                <button class="google_search" href="#">Google Search</button>
-                <button class="lucky_search" href="#">I'm Feeling Lucky</button>
+                <button class="google_search" onclick=location.href="https://github.com/itsmaximelau">Google Search</button>
+                <button class="lucky_search" onclick=location.href="https://github.com/itsmaximelau">I'm Feeling Lucky</button>
             </div>
         </main>
 
         <footer class="footer">
             <li class="left_footer">
-                <a href="#">Advertising</a>
-                <a href="#">Business</a>
-                <a href="#">How Search works</a>
+                <a href="https://github.com/itsmaximelau">Advertising</a>
+                <a href="https://github.com/itsmaximelau">Business</a>
+                <a href="https://github.com/itsmaximelau">How Search works</a>
             </li>
 
             <li class="right_footer">
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Settings</a>
-                <a href="#" class="apps_button"></a>
+                <a href="https://github.com/itsmaximelau">Privacy</a>
+                <a href="https://github.com/itsmaximelau">Terms</a>
+                <a href="https://github.com/itsmaximelau">Settings</a>
+                <a href="https://github.com/itsmaximelau" class="apps_button"></a>
             </li>
         </footer>
 
